Keep sections aligned when opening the dropdowns

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -26,6 +26,7 @@ li {
   section {
     display: inline-block;
     width: 470px;
+    vertical-align: top;
   }
   .mtp-compact-row-1 {
     margin-bottom: 2em;
