--- a/mtp_bank_admin/templates/feedback/submit_feedback.html
+++ b/mtp_bank_admin/templates/feedback/submit_feedback.html
@@ -2,8 +2,10 @@
 {% load i18n %}
 
 {% block content %}
-
-<h1>{% trans 'Your feedback' %}</h1>
+<header class="ContentHeader">
+  <a href="{% url 'bank_admin:dashboard' %}" class="ContentHeader-back">{% trans 'Home' %}</a>
+  <h1>{% trans 'Your feedback' %}</h1>
+</header>
 
 <form action="." method="post" id="send-feedback">
   {% csrf_token %}
