--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -1,6 +1,6 @@
 {% extends 'mtp_base.html' %}
 {% load i18n %}
-{% load moj_utils %}
+{% load mtp_utils %}
 
 {% block main_js %}
   {{ block.super }}
@@ -12,7 +12,7 @@
 {% block proposition %}{% trans "Bank Admin" %}{% endblock %}
 
 {% block user_menu %}
-<span>
-  <a href="{% url 'password_change' %}">{% trans "Change password" %}</a>
-</span>
+  <span>
+    <a href="{% url 'password_change' %}">{% trans "Change password" %}</a>
+  </span>
 {% endblock %}
