Use the new help popup component

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -13,7 +13,7 @@ $images-dir: '/static/images/';
     font-size: 19px;
   }
   h3 { margin: 1em 0 1em 0 }
-  .mtp-filelink { margin-top: 1.2em; }
+  .mtp-filelink { margin: 1.2em 0 1.2em 0 }
   section {
     display: inline-block;
     width: 470px;
