Fix spacing issues, missing or unused classes

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -18,6 +18,7 @@ $images-dir: '/static/images/';
     display: inline-block;
     width: 470px;
     vertical-align: top;
+    margin-bottom: 2em;
   }
   .mtp-compact-row-1 {
     margin-bottom: 2em;
