--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -12,7 +12,7 @@
 
       <div class="mtp-compact-row-1">
         {% if perms.transaction.view_bank_details_transaction %}
-        <section class="ContentBlock">
+        <section>
           <h2>{% trans 'Access Pay file – refunds' %}</h2>
           {% url 'bank_admin:download_refund_file' as base_download_url %}
           {% for day in preceding_days %}
@@ -26,7 +26,7 @@
           </div>
 
           <div class="help-box">
-            <div aria-controls="previous-ap-refunds" aria-expanded="true">
+            <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
             <div  class="panel-indent help-box-contents" id="previous-ap-refunds">
@@ -45,7 +45,7 @@
         </section>
         {% endif %}
 
-        <section class="ContentBlock">
+        <section>
           <h2>{% trans 'ADI Journal – refunds' %}</h2>
           {% url 'bank_admin:download_adi_refund_file' as base_download_url %}
           {% for day in preceding_days %}
@@ -78,7 +78,7 @@
         </section>
       </div>
       <div class="mtp-compact-row-2">
-        <section class="ContentBlock">
+        <section>
           <h2>{% trans 'ADI Journal – credits' %}</h2>
           {% url 'bank_admin:download_adi_payment_file' as base_download_url %}
           {% for day in preceding_days %}
@@ -110,7 +110,7 @@
           </div>
         </section>
 
-        <section class="ContentBlock">
+        <section>
           <h2>{% trans 'Bank statement' %}</h2>
 
           {% url 'bank_admin:download_bank_statement' as base_download_url %}
