Indicate a role in order for the aria attributes to make sense Fixes: https://www.pivotaltracker.com/story/show/116060993

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -26,7 +26,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true">
+            <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
             <div  class="panel-indent help-box-contents" id="previous-ap-refunds">
@@ -59,7 +59,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-adi-refunds" aria-expanded="true">
+            <div class="help-box-title" aria-controls="previous-adi-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – refunds' %}</a>
             </div>
             <div class="panel-indent help-box-contents" id="previous-adi-refunds">
@@ -92,7 +92,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true">
+            <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – credits' %}</a>
             </div>
             <div class="panel-indent help-box-contents" id="previous-adi-journals">
@@ -125,7 +125,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true">
+            <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous bank statements' %}</a>
             </div>
             <div class="panel-indent help-box-contents" id="previous-statements">
