Update app to use new mtp-common package
This new package combines the previous mtp-common, utils and user-admin
packages.

--- a/mtp_bank_admin/templates/base.html
+++ b/mtp_bank_admin/templates/base.html
@@ -1,6 +1,6 @@
-{% extends 'mtp_base.html' %}
+{% extends 'mtp_common/mtp_base.html' %}
 {% load i18n %}
-{% load mtp_utils %}
+{% load mtp_common %}
 
 {% block main_js %}
   {{ block.super }}
