--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -6,7 +6,7 @@
     {% get_preceding_weekdays 3 offset=1 as preceding_days %}
     <h1>{% trans 'Download files' %}</h1>
 
-    {% include "includes/message_box.html" %}
+    {% include "mtp_common/includes/message_box.html" %}
 
     <div class="container">
 
