--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -26,3 +26,7 @@ $images-dir: '/static/images/';
     border-bottom: 1px solid $panel-colour;
   }
 }
+
+form .form-group .form-hint {
+  margin-top: 0;
+}
