--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n dates %}
 
-{% block content %}
+{% block inner_content %}
   <div class="mtp-compact">
     {% get_preceding_weekdays 3 offset=1 as preceding_days %}
-    <h1>{% trans 'Download files' %}</h1>
+    <h1 class="heading-medium">{% trans 'Download files' %}</h1>
 
     {% include "mtp_common/includes/message_box.html" %}
 
@@ -13,7 +13,7 @@
       <div class="mtp-compact-row-1">
         {% if perms.transaction.view_bank_details_transaction %}
         <section>
-          <h2>{% trans 'Access Pay file – refunds' %}</h2>
+          <h2 class="heading-small">{% trans 'Access Pay file – refunds' %}</h2>
           {% url 'bank_admin:download_refund_file' as base_download_url %}
           {% for day in preceding_days %}
               {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download file for {{ date }}{% endblocktrans %}
@@ -29,7 +29,7 @@
             <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
-            <div  class="panel-indent help-box-contents" id="previous-ap-refunds">
+            <div  class="panel help-box-contents" id="previous-ap-refunds">
               <ul>
               {% else %}
                 <li>
@@ -46,7 +46,7 @@
         {% endif %}
 
         <section>
-          <h2>{% trans 'ADI Journal – refunds' %}</h2>
+          <h2 class="heading-small">{% trans 'ADI Journal – refunds' %}</h2>
           {% url 'bank_admin:download_adi_refund_file' as base_download_url %}
           {% for day in preceding_days %}
               {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
@@ -62,7 +62,7 @@
             <div class="help-box-title" aria-controls="previous-adi-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – refunds' %}</a>
             </div>
-            <div class="panel-indent help-box-contents" id="previous-adi-refunds">
+            <div class="panel help-box-contents" id="previous-adi-refunds">
               <ul>
               {% else %}
                 <li>
@@ -79,7 +79,7 @@
       </div>
       <div class="mtp-compact-row-2">
         <section>
-          <h2>{% trans 'ADI Journal – credits' %}</h2>
+          <h2 class="heading-small">{% trans 'ADI Journal – credits' %}</h2>
           {% url 'bank_admin:download_adi_payment_file' as base_download_url %}
           {% for day in preceding_days %}
             {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
@@ -95,7 +95,7 @@
             <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – credits' %}</a>
             </div>
-            <div class="panel-indent help-box-contents" id="previous-adi-journals">
+            <div class="panel help-box-contents" id="previous-adi-journals">
               <ul>
               {% else %}
                 <li>
@@ -111,7 +111,7 @@
         </section>
 
         <section>
-          <h2>{% trans 'Bank statement' %}</h2>
+          <h2 class="heading-small">{% trans 'Bank statement' %}</h2>
 
           {% url 'bank_admin:download_bank_statement' as base_download_url %}
           {% for day in preceding_days %}
@@ -128,7 +128,7 @@
             <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous bank statements' %}</a>
             </div>
-            <div class="panel-indent help-box-contents" id="previous-statements">
+            <div class="panel help-box-contents" id="previous-statements">
               <ul>
                 {% else %}
                 <li>
