--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -29,7 +29,7 @@
             <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
-            <div  class="panel help-box-contents" id="previous-ap-refunds">
+            <div  class="panel panel-border-narrow help-box-contents" id="previous-ap-refunds">
               <ul>
               {% else %}
                 <li>
@@ -62,7 +62,7 @@
             <div class="help-box-title" aria-controls="previous-adi-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – refunds' %}</a>
             </div>
-            <div class="panel help-box-contents" id="previous-adi-refunds">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-refunds">
               <ul>
               {% else %}
                 <li>
@@ -95,7 +95,7 @@
             <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – credits' %}</a>
             </div>
-            <div class="panel help-box-contents" id="previous-adi-journals">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-journals">
               <ul>
               {% else %}
                 <li>
@@ -128,7 +128,7 @@
             <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous bank statements' %}</a>
             </div>
-            <div class="panel help-box-contents" id="previous-statements">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-statements">
               <ul>
                 {% else %}
                 <li>
