Don't print help boxes and links

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -25,11 +25,11 @@
               </a>
           </div>
 
-          <div class="help-box">
+          <div class="help-box print-hidden">
             <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
-            <div  class="panel help-box-contents" id="previous-ap-refunds">
+            <div  class="panel panel-border-narrow help-box-contents" id="previous-ap-refunds">
               <ul>
               {% else %}
                 <li>
@@ -58,11 +58,11 @@
             </a>
           </div>
 
-          <div class="help-box">
+          <div class="help-box print-hidden">
             <div class="help-box-title" aria-controls="previous-adi-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – refunds' %}</a>
             </div>
-            <div class="panel help-box-contents" id="previous-adi-refunds">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-refunds">
               <ul>
               {% else %}
                 <li>
@@ -91,11 +91,11 @@
             </a>
           </div>
 
-          <div class="help-box">
+          <div class="help-box print-hidden">
             <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals – credits' %}</a>
             </div>
-            <div class="panel help-box-contents" id="previous-adi-journals">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-journals">
               <ul>
               {% else %}
                 <li>
@@ -124,11 +124,11 @@
             </a>
           </div>
 
-          <div class="help-box">
+          <div class="help-box print-hidden">
             <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous bank statements' %}</a>
             </div>
-            <div class="panel help-box-contents" id="previous-statements">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-statements">
               <ul>
                 {% else %}
                 <li>
