--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -46,8 +46,8 @@
         {% endif %}
 
         <section>
-          <h2 class="heading-small">{% trans 'ADI Journal – refunds' %}</h2>
-          {% url 'bank_admin:download_adi_refund_file' as base_download_url %}
+          <h2 class="heading-small">{% trans 'ADI Journal' %}</h2>
+          {% url 'bank_admin:download_adi_journal' as base_download_url %}
           {% for day in preceding_days %}
               {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
 
@@ -59,10 +59,10 @@
           </div>
 
           <div class="help-box print-hidden">
-            <div class="help-box-title" aria-controls="previous-adi-refunds" aria-expanded="true" role="heading">
-              <div></div><a href="#">{% trans 'Previous ADI Journals – refunds' %}</a>
+            <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
+              <div></div><a href="#">{% trans 'Previous ADI Journals' %}</a>
             </div>
-            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-refunds">
+            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-journals">
               <ul>
               {% else %}
                 <li>
@@ -78,38 +78,6 @@
         </section>
       </div>
       <div class="mtp-compact-row-2">
-        <section>
-          <h2 class="heading-small">{% trans 'ADI Journal – credits' %}</h2>
-          {% url 'bank_admin:download_adi_payment_file' as base_download_url %}
-          {% for day in preceding_days %}
-            {% blocktrans with date=day|date:'d/m/Y' asvar download_label %}Download transactions for {{ date }}{% endblocktrans %}
-
-            {% if forloop.first %}
-          <div class="mtp-filelink">
-            <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-            {{ download_label }}
-            </a>
-          </div>
-
-          <div class="help-box print-hidden">
-            <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
-              <div></div><a href="#">{% trans 'Previous ADI Journals – credits' %}</a>
-            </div>
-            <div class="panel panel-border-narrow help-box-contents" id="previous-adi-journals">
-              <ul>
-              {% else %}
-                <li>
-                  <a href="{{ base_download_url }}?receipt_date={{ day|date:'Y-m-d' }}">
-                      {{ download_label }}
-                  </a>
-                </li>
-              {% endif %}
-          {% endfor %}
-              </ul>
-            </div>
-          </div>
-        </section>
-
         <section>
           <h2 class="heading-small">{% trans 'Bank statement' %}</h2>
 
