Remove class made obsolete in common

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -25,7 +25,7 @@
               </a>
           </div>
 
-          <div class="help-box print-hidden">
+          <div class="help-box">
             <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
@@ -58,7 +58,7 @@
             </a>
           </div>
 
-          <div class="help-box print-hidden">
+          <div class="help-box">
             <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals' %}</a>
             </div>
@@ -92,7 +92,7 @@
             </a>
           </div>
 
-          <div class="help-box print-hidden">
+          <div class="help-box">
             <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true" role="heading">
               <div></div><a href="#">{% trans 'Previous bank statements' %}</a>
             </div>
