--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -6,27 +6,40 @@ $images-dir: '/static/images/';
 
 // Dashboard design makes page shorter so the whole page fits
 // on a typical user screen
+
+// govuk-elements overrides
+
+form .form-group .form-hint {
+  margin-top: 0;
+}
+
+// Application specific
+
 .mtp-compact {
-  h1 { font-size: 28px; }
+  h1 {
+    font-size: 28px;
+  }
   h2 {
     margin: 0;
     font-size: 19px;
   }
-  h3 { margin: 1em 0 1em 0 }
-  .mtp-filelink { margin: 1.2em 0 1.2em 0 }
+  h3 {
+    margin: 1em 0 1em 0;
+  }
   section {
     display: inline-block;
     width: 470px;
     vertical-align: top;
     margin-bottom: 2em;
   }
-  .mtp-compact-row-1 {
-    margin-bottom: 2em;
-    padding-bottom: 1em;
-    border-bottom: 1px solid $panel-colour;
-  }
 }
 
-form .form-group .form-hint {
-  margin-top: 0;
+.mtp-compact__row-1 {
+  margin-bottom: 2em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid $panel-colour;
+}
+
+.mtp-filelink {
+  margin: 1.2em 0 1.2em 0;
 }
