Check for bank holidays when finding previous workdays
Previously generating previous workdays only excluded weekends.
We now use the GOV.UK bank holidays content API to retrieve a
list of bank holidays and also check against those.

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -3,7 +3,7 @@
 
 {% block inner_content %}
   <div class="mtp-compact">
-    {% get_preceding_weekdays 3 offset=1 as preceding_days %}
+    {% get_preceding_workdays 3 offset=1 as preceding_days %}
     <h1 class="heading-medium">{% trans 'Download files' %}</h1>
 
     {% include "mtp_common/includes/message_box.html" %}
