Make all titles x-large

--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -4,7 +4,7 @@
 {% block inner_content %}
   <div class="mtp-compact">
     {% get_preceding_workdays 3 offset=1 as preceding_days %}
-    <h1 class="heading-medium">{% trans 'Download files' %}</h1>
+    <h1 class="heading-xlarge">{% trans 'Download files' %}</h1>
 
     {% include "mtp_common/includes/message_box.html" %}
 
