--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -26,7 +26,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="true" role="heading">
+            <div class="help-box-title" aria-controls="previous-ap-refunds" aria-expanded="false" role="heading">
               <div></div><a href="#">{% trans 'Previous AccessPay refund files' %}</a>
             </div>
             <div class="panel panel-border-narrow help-box-contents" id="previous-ap-refunds">
@@ -59,7 +59,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="true" role="heading">
+            <div class="help-box-title" aria-controls="previous-adi-journals" aria-expanded="false" role="heading">
               <div></div><a href="#">{% trans 'Previous ADI Journals' %}</a>
             </div>
             <div class="panel panel-border-narrow help-box-contents" id="previous-adi-journals">
@@ -93,7 +93,7 @@
           </div>
 
           <div class="help-box">
-            <div class="help-box-title" aria-controls="previous-statements" aria-expanded="true" role="heading">
+            <div class="help-box-title" aria-controls="previous-statements" aria-expanded="false" role="heading">
               <div></div><a href="#">{% trans 'Previous bank statements' %}</a>
             </div>
             <div class="panel panel-border-narrow help-box-contents" id="previous-statements">
