--- a/mtp_bank_admin/templates/bank_admin/dashboard.html
+++ b/mtp_bank_admin/templates/bank_admin/dashboard.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
-{% load i18n dates %}
+{% load i18n %}
+{% load dates %}
+{% load mtp_common %}
 
 {% block inner_content %}
   <div class="mtp-compact">
     {% get_preceding_workdays 3 offset=1 as preceding_days %}
-    <h1 class="heading-xlarge">{% trans 'Download files' %}</h1>
+
+    <header>
+      {% language_switch %}
+      <h1 class="heading-xlarge">{% trans 'Download files' %}</h1>
+    </header>
 
     {% include "mtp_common/includes/message_box.html" %}
 
