Use a new build process • remove dependencies on make, shell scripts and fs-watch • run uWSGI directly rather than from within make or shell scripts • generate package.json rather than installing dependencies directly • use es-lint and sass-lint

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -19,27 +19,30 @@ form .form-group .form-hint {
   h1 {
     font-size: 28px;
   }
+
   h2 {
-    margin: 0;
     font-size: 19px;
+    margin: 0;
   }
+
   h3 {
-    margin: 1em 0 1em 0;
+    margin: 1em 0;
   }
+
   section {
     display: inline-block;
-    width: 470px;
-    vertical-align: top;
     margin-bottom: 2em;
+    vertical-align: top;
+    width: 470px;
   }
 }
 
 .mtp-compact__row-1 {
+  border-bottom: 1px solid $panel-colour;
   margin-bottom: 2em;
   padding-bottom: 1em;
-  border-bottom: 1px solid $panel-colour;
 }
 
 .mtp-filelink {
-  margin: 1.2em 0 1.2em 0;
+  margin: 1.2em 0;
 }
