Use internal-staff-facing base template with MoJ logo instead of GOV.UK

--- a/mtp_bank_admin/assets-src/stylesheets/app.scss
+++ b/mtp_bank_admin/assets-src/stylesheets/app.scss
@@ -2,7 +2,7 @@
 
 $images-dir: '/static/images/';
 
-@import 'mtp';
+@import 'mtp-internal';
 
 // Dashboard design makes page shorter so the whole page fits
 // on a typical user screen
